2011-02-13  kitone  <kitone@gna.org>

	* src/subtitle.cc:
	Clean code.

	* src/subtitleview.cc:
	Fix bug #17686 : CPS error detection, display CPS with colors.

2011-02-13  kitone  <kitone@gna.org>

	* plugins/actions/timingfromplayer/timingfromplayer.cc:
	Fix bug #17686 : set_subtitle_end_and_start (original patch by Tomas Partl <eltomito>)
	Fix bug #17648 : Add new command to plugin TimingFromPlayer (original patch by Victor Cighir <victorcighir>)
	Improvement of the plugin timingfromplayer, new actions and code refactoring.

2011-01-10  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2011-01-10  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.38.0 release.

2011-01-10  kitone  <kitone@gna.org>

	* plugins/actions/sortsubtitles/sortsubtitles.cc:
	* src/subtitles.cc:
	* src/subtitles.h:
	Rewrite sort subtitles. Speed improvements.

2010-12-22  kitone  <kitone@gna.org>

	* plugins/actions/configurekeyboardshortcuts/configurekeyboardshortcuts.cc:
	Clean code.

2010-12-06  kitone  <kitone@gna.org>

	* plugins/subtitleformats/subtitleeditorproject/subtitleeditorproject.cc:
	Fix bug #17231 : Opening SEP project wont open a Keyframes file automatically.

2010-11-10  kitone  <kitone@gna.org>

	* plugins/actions/adjusttime/adjusttime.cc:
	Fix English errors patch by Pavel Dvořák.

2010-11-05  kitone  <kitone@gna.org>

	* src/subtitlemodel.cc:
	* src/subtitlemodel.h:
	* src/subtitles.cc:
	* src/subtitles.h:
	Fix bug #17000 : Subtitles in MicroDVD format don't display correct.
	SubtitleModel::find doesn't work if the document is frame based.
	Remove unused function find_in_or_after. 
	Clean code.

2010-11-01  kitone  <kitone@gna.org>

	* plugins/subtitleformats/microdvd/microdvd.cc:
	Fix bug #16898 : Feature request - movie fps detecting.

2010-11-01  kitone  <kitone@gna.org>

	* plugins/actions/scalesubtitles/scalesubtitles.cc:
	Fix bug #16917 : scale option doesn't work correctly with frame-based subtitles.
