@@ -1,3 +1,9 @@
+2011-03-05  kitone  <kitone@gna.org>
+
+	* POTFILES.in:
+	* subtitleeditor.pot:
+	Update with last strings and files.
+
 2011-01-10  kitone  <kitone@gna.org>
 
 	* subtitleeditor.pot:
